--- a/Apollo/MainWindow.xaml
+++ b/Apollo/MainWindow.xaml
@@ -3,23 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <GroupBox Header="Load">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                </Grid.ColumnDefinitions>
-
-                <TextBox Text="{Binding SelectedFilePath}" IsEnabled="{Binding IsFileOpen}"
-                         Grid.Column="0"/>
-
-                <Button Content="Select File" Grid.Column="1" Click="SelectFile_Click"/>
-                <Button Content="Load Selected File" Grid.Column="2" Click="LoadFile_Click" />
-                <Button Content="Save and Close" Grid.Column="3" Click="SaveCloseFile_Click" />
-                
-            </Grid>
-        </GroupBox>
+        <StackPanel>
+            <Button Content="Load Control" Click="LoadControl_Click" />
+                        
+            <ContentControl Name="_ContentControl" />
+        </StackPanel>
     </Grid>
 </Window>
